# Squvd

./: Cargo.toml  README.md
src/: lib.rs
src/instructions/: close_proposal.rs  initialize_multisig.rs  initialize_proposal.rs  mod.rs  update_multisig.rs  vote_proposal.rs
src/state/: mod.rs  multisig.rs  proposal.rs  vote.rs
