[package]
name = "Squvd"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]


[dependencies]
pinocchio = { git = "https://github.com/anza-xyz/pinocchio.git" }
pinocchio-log = { git = "https://github.com/anza-xyz/pinocchio.git" }
pinocchio-pubkey = { git = "https://github.com/anza-xyz/pinocchio.git" }
pinocchio-system = { git = "https://github.com/anza-xyz/pinocchio.git" }
shank = "0.4.2"

[features]
default = []
std = []
